--- a/package.json
+++ b/package.json
@@ -16,9 +16,18 @@
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
+    "@angular/material": "^16.2.7",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ngrx/component": "^16.3.0",
+    "@ngrx/component-store": "^16.3.0",
+    "@ngrx/data": "^16.3.0",
+    "@ngrx/effects": "^16.3.0",
+    "@ngrx/entity": "^16.3.0",
+    "@ngrx/router-store": "^16.3.0",
+    "@ngrx/store": "^16.3.0",
+    "api": "^6.1.1",
     "chart.js": "^4.4.0",
     "ng2-charts": "^5.0.3",
     "primeflex": "^3.3.1",
@@ -28,6 +37,8 @@
     "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.1",
+    "uuidv4": "^6.2.13",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -36,6 +47,7 @@
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
+    "json-server": "^0.17.4",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
