--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@ngrx/entity": "^16.3.0",
     "@ngrx/router-store": "^16.3.0",
     "@ngrx/store": "^16.3.0",
+    "@ngrx/store-devtools": "^16.3.0",
     "api": "^6.1.1",
     "chart.js": "^4.4.0",
     "ng2-charts": "^5.0.3",
+    "ngx-webstorage": "^12.0.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^16.3.1",
