--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@automapper/classes": "^8.7.7",
+    "@automapper/core": "^8.7.7",
+    "@automapper/mikro": "^8.7.7",
+    "@automapper/nestjs": "^8.7.7",
+    "@automapper/pojos": "^8.7.7",
+    "@automapper/sequelize": "^8.7.7",
     "@ngrx/component": "^16.3.0",
     "@ngrx/component-store": "^16.3.0",
     "@ngrx/data": "^16.3.0",
@@ -37,6 +43,7 @@
     "primeng": "^16.3.1",
     "prism": "^1.0.0",
     "prismjs": "^1.29.0",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
